--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "babel --presets es2015 -d lib/ src/",
-    "prepublish": "npm run compile",
+    "prepare": "npm run compile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
